# plan-trib

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/documentos/infraestrutura/: 2025_12_30 - versão docker-compose_yml.txt  Documentacao_Backup_Nextcloud_n8n.md  Documentação infraestrutura VPS + Nextcloud.md
.claude/kb/: _index.yaml
.github/workflows/: build-push.yml  ci.yml  deploy.yml
docker/: backend.Dockerfile  web.Dockerfile
kb/specs/: leiautes-sped-versoes.yaml  presuncao-irpj-csll.yaml
migrations/: env.py
migrations/versions/: 0001_initial.py
ops/: dns-setup.md  extend-backup-infra.sh.patch
src/: config.py  db.py  deps.py  main.py
src/api/: apuracao.py  auth.py  despesas.py  documentos.py  empresas.py  grupos.py
src/engine/: __init__.py  inputs.py  interface.py  lucro_presumido.py  lucro_real.py  outputs.py  simples.py  tabelas.py
src/extractors/: base.py  folha_extractor.py  pgdas_extractor.py
src/models/: __init__.py  apuracao.py  audit_log.py  base.py  cenario.py  credito.py  despesa.py  documento.py  empresa.py  faturamento.py  folha.py  grupo.py  periodo.py  pgdas.py  usuario.py
src/parsers/: base.py
src/schemas/: apuracao.py  auth.py  despesa.py  empresa.py  grupo.py
src/services/: audit_service.py  auth_service.py  comparador_service.py  ingestao_service.py
src/utils/: decimal_utils.py
tests/: conftest.py
web/: package.json
web/app/: layout.tsx  page.tsx
web/app/login/: page.tsx
web/components/: DespesasReplicador.tsx
web/lib/: api.ts
(+105 files in other folders)
